--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -34,6 +34,17 @@ a {
   background-color: rgba(255, 255, 255, 0.2);
   border-color: rgba(255, 255, 255, 0.3); }
 
+.btn-default {
+  display: inline-block;
+  margin-bottom: 1rem;
+  color: rgba(0,0,0, 0.7);
+  background-color: rgba(255, 255, 255, 0.08);
+  border-color: rgba(0,0,0, 0.2);
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 0.3rem;
+  transition: color 0.2s, background-color 0.2s, border-color 0.2s; }
+ 
 @media screen and (min-width: 64em) {
   .btn {
     padding: 0.75rem 1rem; } }
