--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -44,6 +44,12 @@ a {
   border-width: 1px;
   border-radius: 0.3rem;
   transition: color 0.2s, background-color 0.2s, border-color 0.2s; }
+.btn-default:hover {
+  color: rgba(0, 0, 0, 1);
+  text-decoration: none;
+  background-color: rgba(0, 0, 0, 0.2);
+  border-color: rgba(0, 0, 0, 0.3); }
+
  
 @media screen and (min-width: 64em) {
   .btn {
